--- a/api/pom.xml
+++ b/api/pom.xml
@@ -50,8 +50,8 @@
 
         <dependency>
             <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>5.0.4</version>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.3.0</version>
         </dependency>
 
     </dependencies>
